--- a/PointCloudApp/imgui.ini
+++ b/PointCloudApp/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
-Pos=17,52
-Size=363,548
+Pos=9,267
+Size=359,380
 Collapsed=0
 
 [Window][ImPlot Demo]
@@ -12,4 +12,34 @@ Collapsed=0
 Pos=648,20
 Size=550,680
 Collapsed=1
+
+[Window][Dialogx1]
+Pos=564,274
+Size=359,278
+Collapsed=0
+
+[Window][E:\cgModel\glTF-Sample-Models-master\2.0\DamagedHelmet\glTF\DamagedHelmet.gltf]
+Pos=77,424
+Size=363,225
+Collapsed=0
+
+[Window][E:\cgModel\bunny6000.half]
+Pos=74,431
+Size=414,292
+Collapsed=0
+
+[Window][Axis]
+Pos=683,389
+Size=142,122
+Collapsed=0
+
+[Window][E:\cgModel\bunny4000.half]
+Pos=60,60
+Size=338,232
+Collapsed=0
+
+[Window][E:\cgModel\Armadillo.half]
+Pos=60,60
+Size=338,255
+Collapsed=0
 
