--- a/PointCloudApp/imgui.ini
+++ b/PointCloudApp/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
-Pos=10,273
-Size=359,380
+Pos=26,78
+Size=359,364
 Collapsed=0
 
 [Window][ImPlot Demo]
@@ -24,14 +24,14 @@ Size=363,225
 Collapsed=0
 
 [Window][E:\cgModel\bunny6000.half]
-Pos=535,225
-Size=414,364
+Pos=1252,259
+Size=688,485
 Collapsed=0
 
 [Window][Axis]
-Pos=683,389
+Pos=1120,81
 Size=142,122
-Collapsed=0
+Collapsed=1
 
 [Window][E:\cgModel\bunny4000.half]
 Pos=60,60
@@ -41,5 +41,20 @@ Collapsed=0
 [Window][E:\cgModel\Armadillo.half]
 Pos=60,60
 Size=338,255
+Collapsed=0
+
+[Window][E:\cgModel\nv_pro\downloaded_resources\blade.csf.gz]
+Pos=1260,328
+Size=540,160
+Collapsed=0
+
+[Window][E:\cgModel\nv_pro\downloaded_resources\geforce.csf.gz]
+Pos=113,481
+Size=560,247
+Collapsed=1
+
+[Window][PointCloud]
+Pos=939,344
+Size=308,296
 Collapsed=0
 
