--- a/PointCloudApp/imgui.ini
+++ b/PointCloudApp/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
-Pos=26,80
-Size=359,364
+Pos=0,0
+Size=645,314
 Collapsed=0
 
 [Window][ImPlot Demo]
@@ -19,19 +19,19 @@ Size=359,278
 Collapsed=0
 
 [Window][E:\cgModel\glTF-Sample-Models-master\2.0\DamagedHelmet\glTF\DamagedHelmet.gltf]
-Pos=1130,431
-Size=363,225
+Pos=0,433
+Size=640,220
 Collapsed=0
 
 [Window][E:\cgModel\bunny6000.half]
-Pos=1373,308
-Size=688,485
+Pos=0,314
+Size=643,460
 Collapsed=0
 
 [Window][Axis]
-Pos=1120,81
+Pos=0,433
 Size=142,122
-Collapsed=1
+Collapsed=0
 
 [Window][E:\cgModel\bunny4000.half]
 Pos=60,60
@@ -49,12 +49,22 @@ Size=540,160
 Collapsed=0
 
 [Window][E:\cgModel\nv_pro\downloaded_resources\geforce.csf.gz]
-Pos=113,481
+Pos=0,433
 Size=560,247
-Collapsed=1
+Collapsed=0
 
 [Window][PointCloud]
 Pos=939,344
 Size=308,296
+Collapsed=0
+
+[Window][E:\cgModel\glTF-Sample-Models-master\2.0\Sponza\glTF\Sponza.gltf]
+Pos=0,433
+Size=646,235
+Collapsed=0
+
+[Window][InstancedCube]
+Pos=0,433
+Size=32,35
 Collapsed=0
 
