--- a/PointCloudApp/PointCloudApp.vcxproj.filters
+++ b/PointCloudApp/PointCloudApp.vcxproj.filters
@@ -51,7 +51,7 @@
     <Filter Include="ソース ファイル\Utility\PointCloud">
       <UniqueIdentifier>{2a44b236-d1b0-4470-9761-755616275d4a}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ソース ファイル\Utility\CADScene">
+    <Filter Include="ソース ファイル\Utility\CSF">
       <UniqueIdentifier>{20aa09f7-84d0-4b8a-ad71-60f9912f1806}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -251,11 +251,8 @@
     <ClCompile Include="Voxelizer.cpp">
       <Filter>ソース ファイル\Algorithm</Filter>
     </ClCompile>
-    <ClCompile Include="CADSceneLoader.cpp">
-      <Filter>ソース ファイル\Utility\CADScene</Filter>
-    </ClCompile>
     <ClCompile Include="CSFNode.cpp">
-      <Filter>ソース ファイル\Utility\CADScene</Filter>
+      <Filter>ソース ファイル\Utility\CSF</Filter>
     </ClCompile>
     <ClCompile Include="SignedDistanceField.cpp">
       <Filter>ソース ファイル\Algorithm</Filter>
@@ -475,11 +472,8 @@
     <ClInclude Include="Voxelizer.h">
       <Filter>ソース ファイル\Algorithm</Filter>
     </ClInclude>
-    <ClInclude Include="CADSceneLoader.h">
-      <Filter>ソース ファイル\Utility\CADScene</Filter>
-    </ClInclude>
     <ClInclude Include="CSFNode.h">
-      <Filter>ソース ファイル\Utility\CADScene</Filter>
+      <Filter>ソース ファイル\Utility\CSF</Filter>
     </ClInclude>
     <ClInclude Include="SignedDistanceField.h">
       <Filter>ソース ファイル\Algorithm</Filter>
