--- a/PointCloudApp/imgui.ini
+++ b/PointCloudApp/imgui.ini
@@ -1,7 +1,7 @@
 [Window][Debug##Default]
 Pos=0,0
-Size=645,314
-Collapsed=0
+Size=645,391
+Collapsed=1
 
 [Window][ImPlot Demo]
 Pos=660,168
@@ -24,12 +24,12 @@ Size=640,220
 Collapsed=0
 
 [Window][E:\cgModel\bunny6000.half]
-Pos=0,314
-Size=643,460
+Pos=0,391
+Size=643,554
 Collapsed=0
 
 [Window][Axis]
-Pos=0,433
+Pos=0,391
 Size=142,122
 Collapsed=0
 
@@ -66,5 +66,35 @@ Collapsed=0
 [Window][InstancedCube]
 Pos=0,433
 Size=32,35
+Collapsed=0
+
+[Window][Area Histogram]
+Pos=1457,699
+Size=518,299
+Collapsed=0
+
+[Window][Vertex Area]
+Pos=1005,710
+Size=518,299
+Collapsed=0
+
+[Window][HeatValue]
+Pos=1371,536
+Size=518,299
+Collapsed=0
+
+[Window][VertexArea]
+Pos=1374,712
+Size=518,299
+Collapsed=0
+
+[Window][SDF]
+Pos=1365,594
+Size=518,299
+Collapsed=0
+
+[Window][Simulation]
+Pos=0,19
+Size=120,56
 Collapsed=0
 
